[tool.poetry]
name = "w266"
version = "0.1.0"
description = ""
authors = ["Lawrence Lai <lawrence.c.lai@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
transformers = "^4.35.2"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
